--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"@types/pdf-parse": "^1.1.4",
+		"@types/pg": "^8.11.10",
+		"@xenova/transformers": "^2.17.2",
+		"dotenv": "^16.4.7",
+		"pdf-parse": "^1.1.1",
+		"pg": "^8.13.1"
 	}
 }
