--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
+		"typesense": "^1.8.2",
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
