--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
+	"npmignore": ["test/*"],
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -22,6 +23,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"pdf-parse": "^1.1.1",
 		"pdf2img": "^0.5.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
@@ -37,7 +39,6 @@
 		"@types/pg": "^8.11.10",
 		"@xenova/transformers": "^2.17.2",
 		"dotenv": "^16.4.7",
-		"pdf-parse": "^1.1.1",
 		"pg": "^8.13.1"
 	}
 }
