--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite dev --host",
 		"build": "vite build",
 		"start:prod": "node build/",
-		"preview": "vite preview",
+		"preview": "vite preview --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
