--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
-	"npmignore": ["test/*"],
+	"npmignore": [
+		"test/*"
+	],
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"bootstrap": "^5.3.3",
