--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"test/*"
 	],
 	"devDependencies": {
+		"@anthropic-ai/sdk": "^0.33.1",
 		"@eslint/compat": "^1.2.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.11",
